[fixed] aside bar not overflowing

--- a/main.css
+++ b/main.css
@@ -41,6 +41,7 @@ table {
 }
 
 /*-----------------------------------------------------------------*/
+
 body {
     background-color: #f5f5f5; /* Light grey background */
     color: #333; /* Dark grey text */
@@ -156,6 +157,7 @@ aside {
 article {
     display: flex; /* Display the content side by side */
     flex-flow: column nowrap; /* Wrap the content */
+    overflow-x: hidden; /* Hide the horizontal scrollbar */
 }
 
 .article-title {
@@ -182,6 +184,7 @@ article {
     font-size: 1.2rem; /* Increase the font size */
     font-family: Arial, Helvetica, sans-serif;
     margin-top: 7px;
+    margin-bottom: 5%;
     align-self: center;
     max-width: 90%;
 }
@@ -197,6 +200,10 @@ article {
 
 /* PROJECT */
 /* -------------------------------------------------------------------------- */
+.project-list {
+    margin-bottom: 10%;
+}
+
 .project-item {
     margin: 10px 0; /* Add some margin to the top and bottom */
     padding: 20px; /* Add some padding */
@@ -252,7 +259,7 @@ article {
 /* INTERESTS */
 /* -------------------------------------------------------------------------- */
 .tools-list {
-    margin: 50px auto; /* Add margin to the top and bottom and set left and right margins to auto */
+    margin: 25px auto; /* Add margin to the top and bottom and set left and right margins to auto */
     display: flex; /* Display the content side by side */
     flex-flow: row wrap; /* Wrap the content */
     justify-content: center; /* Center the content horizontally */
@@ -332,6 +339,7 @@ article {
         justify-content: space-between; /* Space between the content */
         width: 100%; /* Full width */
         height: 100vh; /* Full height */
+        overflow-x: auto;
     }
     
     /* ASIDE */
@@ -363,6 +371,7 @@ article {
         flex: 1 0 100%; /* Adjust the width */
         height: 100%;
         width: 90%;
+        overflow: auto;
     }
     
     .article-text {
